# cetustek-sdk

./: .gitignore  README.md  example.py  pyproject.toml
.github/workflows/: publish.yml
src/cetustek/: __init__.py  client.py  models.py
tests/: test_cetustek.py
